ignore patch as well

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,8 +9,8 @@ updates:
     open-pull-requests-limit: 10
     ignore:
       - dependency-name: suse/sle15
-        # ignore all updates on major and minor; only patches allowed
-        update-types: ["version-update:semver-major", "version-update:semver-minor"] 
+        # ignore all updates on major, minor and patch
+        update-types: ["version-update:semver-major", "version-update:semver-minor", "version-update:semver-patch"] 
 
   - package-ecosystem: github-actions
     directory: /
